# FinBot

./: .dockerignore  .env.example  Dockerfile  NEXT_STEPS.md  README.md  docker-compose.yml  init-db.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/database/: __init__.py  connection.py  models.py  seed.py
app/handlers/: __init__.py  webhook.py
app/services/: __init__.py  admin_rate_limit.py  ai.py  auth.py  backup.py  budget.py  category.py  chart.py  credentials.py  currency.py  evolution.py  expense.py  export.py  gemini.py  goal.py  onboarding.py  operational_status.py  rate_limit.py  recurring.py  scheduler.py  security.py  user.py  webhook_idempotency.py  whatsapp_onboarding.py
app/utils/: __init__.py  parser.py  validators.py
docs/: onboarding-plan.md
tests/: conftest.py  test_ai.py  test_auth.py  test_backup.py  test_budget.py  test_category_service.py  test_chart.py  test_credentials.py  test_currency.py  test_dashboard_web.py  test_evolution.py  test_expense.py  test_export.py  test_gemini.py  test_goal.py  test_onboarding_web.py  test_parser.py  test_rate_limit.py  test_scheduler.py  test_security.py  test_settings_web.py  test_user.py  test_webhook.py
web/: dashboard.html  login.html  onboarding.html  plano_acao.md  settings.html
