[project]
name = "finbot"
version = "1.0.0"
description = "WhatsApp Financial Assistant"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "SIM108", # use ternary operator instead of if-else
    "E712",   # comparison to True/False (needed for SQLAlchemy boolean columns)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["tests", "venv", ".venv"]

[[tool.mypy.overrides]]
module = ["app.services.*", "app.handlers.*", "app.database.*", "app.config"]
disable_error_code = ["return-value", "assignment", "arg-type", "call-arg", "var-annotated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F841"]  # Allow imports not at top and unused variables in tests

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/database/seed.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
